feat: get one ticket
