# routes/ticket.route.ts
@@ -1,10 +1,15 @@
 import express from 'express'
-import { createTicket, getTickets } from '../controllers/ticket.controller'
+import {
+  createTicket,
+  getAllTicketsOfUser,
+  getOneTicketList,
+} from '../controllers/ticket.controller'
 import { protect } from '../middlewares/auth.middleware'
 
 const router = express.Router()
 
-router.get('/', protect, getTickets)
+router.get('/', protect, getAllTicketsOfUser)
 router.post('/', protect, createTicket)
+router.get('/:ticketId', protect, getOneTicketList)
 
 export default router
